--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <link rel="icon" type="image/png" href="images/favicon.png" />
     <style>
         #social:hover {
-            opacity: 0.5;
+            color: #F25252;
         }
     </style>
 
@@ -213,7 +213,7 @@
                                 <div class="col-md-offset-1 col-md-10">
                                     <h3>Alexis Jaubourg</h3>
                                     <h5 class="mb40">Batterie</h5>
-                                    <p>Quand tu fais le calcul, si vraiment tu veux te rappeler des souvenirs de ton perroquet, le cycle du cosmos dans la vie... c'est une grande roue et ça, c'est très dur, et, et, et... c'est très facile en même temps. </p>
+                                    <p>Quand tu fais le calcul, si vraiment tu veux te rappeler des souvenirs de ton perroquet, le cycle du cosmos, de la vie... c'est une grande roue et ça, c'est très dur, et c'est facile en même temps. </p>
                                 </div>
                             </div>
                         </div>
@@ -238,7 +238,7 @@
                                                         <div class="row">
                                                             <div class="col-xs-5">
                                                                 <h5><span>12 Rue Feydeau, Paris</span></h5>
-                                                                <p>15 octobre - 2020 - 19:00</p>
+                                                                <p>15 octobre 2020 - 19:00</p>
                                                             </div>
                                                             <div class="col-xs-7 text-right">
                                                                 <h1><span>Le Truskel</h1>
