--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@
                                                     <div class="col-sm-6 col-sm-offset-3">
                                                         <div class="row">
                                                             <div class="col-xs-5">
-                                                                <h5><span>40 rue Charcot</span></h5>
+                                                                <h5><span>5 Rue Moret, Paris</span></h5>
                                                                 <p>31 octobre 2020 - 19:00</p>
                                                             </div>
                                                             <div class="col-xs-7 text-right">
